--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+    <title>Akomis</title>
+    <meta property="title" content="Akmois" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://www.akomis.com/" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A WIP ARPG by Seleris.">
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
@@ -26,7 +26,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Styles                                                            -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Bootstrap CSS -->
     <!-- Using Bootstrap 4.5 because its closest to Toyhou.se's current version -->
     <!-- https://getbootstrap.com/docs/4.5/getting-started/introduction/ -->
@@ -39,7 +38,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Optional Styles                                                   -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/charadex.css">
 
@@ -78,14 +76,15 @@
                     <!-- Hero Image & Title
                     ------------------------------------------------------------- -->
                     <div class="hero-title mb-4" style="background-image: url();">
-                        <div class="m-auto">Charadex</div>
+                        <div class="m-auto">Lyuria</div>
                     </div>
 
 
                     <!-- Description
                     ------------------------------------------------------------- -->
                     <div class="px-4 text-muted">
-                        <p>Write about your species...</p>
+                        <p>Akomi are an aquatic, angel species that live in the Aurora Belt, a wide, circular
+                        stretch of flat-land on the ocean floor.</p>
                     </div>
 
 
@@ -98,7 +97,7 @@
                             <h5>About</h5>
                             <div class="px-3">
                                 <a class="btn btn-primary d-block mb-1" href="world.html">World</a>
-                                <a class="btn btn-primary d-block mb-1" href="species.html">Species</a>
+                                <a class="btn btn-primary d-block mb-1" href="species.html">Species Concept</a>
                                 <a class="btn btn-primary d-block mb-1" href="masterlist.html">Designs</a>
                             </div>
                         </div>
@@ -106,8 +105,8 @@
                         <div class="col-lg-4 col-md-6 p-1">
                             <h5>Community</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="#">Toyhou.se</a>
-                                <a class="btn btn-primary d-block mb-1" href="#">Discord</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://toyhou.se/~world/203392.lyurias-depths">Toyhou.se</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://discord.gg/K4Sjmv5Au3">Discord</a>
                                 <a class="btn btn-primary d-block mb-1" href="prompts.html">Prompts</a>
                             </div>
                         </div>
@@ -115,27 +114,14 @@
                         <div class="col-lg-4 col-md-6 p-1">
                             <h5>Resources</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="#">Help Desk</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://toyhou.se/~forums/59872.reception/613897.help-desk">Help Desk</a>
                                 <a class="btn btn-primary d-block mb-1" href="faq.html">FAQ</a>
                                 <a class="btn btn-primary d-block mb-1" href="terms.html">TOS</a>
                             </div>
                         </div>
 
                     </div>
-
-
-                    <!-- Social Media Links
-                    ------------------------------------------------------------- -->
                     <hr class="mt-4">
-                    <div class="text-center mb-md-n4 font-weight-bold">
-
-                        <a class="mx-3" href="#"><i class="fas fa-floppy-disk fa-fw mr-1"></i> Toyhou.se</a>
-                        <a class="mx-3" href="#"><i class="fab fa-discord fa-fw mr-1"></i> Discord</a>
-                        <a class="mx-3" href="#"><i class="fab fa-twitter fa-fw mr-1"></i> Twitter </a>
-                        <a class="mx-3" href="#"><i class="fab fa-tumblr fa-fw mr-1"></i> Tumblr</a>
-                        <a class="mx-3" href="#"><i class="fas fa-cloud fa-fw mr-1"></i> BSky</a>
-
-                    </div>
                 </div>
             </div>
 
