--- a/masterlist.html
+++ b/masterlist.html
@@ -11,12 +11,12 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+    <title>Akomis</title>
+    <meta property="title" content="Akmois" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://www.akomis.com/" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A WIP ARPG by Seleris.">
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
@@ -26,7 +26,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Styles                                                            -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Bootstrap CSS -->
     <!-- Using Bootstrap 4.5 because its closest to Toyhou.se's current version -->
     <!-- https://getbootstrap.com/docs/4.5/getting-started/introduction/ -->
@@ -39,7 +38,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Optional Styles                                                   -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/charadex.css">
 
