--- a/staff.html
+++ b/staff.html
@@ -11,12 +11,12 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+    <title>Akomis</title>
+    <meta property="title" content="Akmois" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://www.akomis.com/" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A WIP ARPG by Seleris.">
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
@@ -26,7 +26,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Styles                                                            -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Bootstrap CSS -->
     <!-- Using Bootstrap 4.5 because its closest to Toyhou.se's current version -->
     <!-- https://getbootstrap.com/docs/4.5/getting-started/introduction/ -->
@@ -39,7 +38,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Optional Styles                                                   -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/charadex.css">
 
@@ -78,12 +76,12 @@
             ----------------------------------------------------------------- -->
             <div class="card p-md-5 p-4 mb-4">
                 <h3 class="mb-0">
-                    <a href="staff.html">Our Staff</a>
+                    <a href="staff.html">Lyuria Staff</a>
                 </h3>
                 <hr>
                 <div class="pl-3 text-muted">
 
-                    <p>Write a lil exerpt here...</p>
+                    <p>Thank you everyone!</p>
 
                 </div>
             </div>
