--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Akomis</title>
-    <meta property="title" content="Akmois" />
+    <title>LYURIA</title>
+    <meta property="title" content="Lyuria" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.akomis.com/" />
+    <meta property="url" content="https://www.lyuria.com/" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A WIP ARPG by Seleris.">
 
@@ -83,7 +83,7 @@
                     <!-- Description
                     ------------------------------------------------------------- -->
                     <div class="px-4 text-muted">
-                        <p>Akomi are an aquatic, angel species that live in the Aurora Belt, a wide, circular
+                        <p>Lyuria is a planet of moonlight home to many varied species. One of which are Akomi - an aquatic, angel species that live in the Aurora Belt, a wide, circular
                         stretch of flat-land on the ocean floor.</p>
                     </div>
 
