--- a/faq.html
+++ b/faq.html
@@ -11,10 +11,10 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Akomis</title>
-    <meta property="title" content="Akmois" />
+    <title>LYURIA</title>
+    <meta property="title" content="Lyuria" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.akomis.com/" />
+    <meta property="url" content="https://www.lyuria.com/" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A WIP ARPG by Seleris.">
 
@@ -26,7 +26,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Styles                                                            -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Bootstrap CSS -->
     <!-- Using Bootstrap 4.5 because its closest to Toyhou.se's current version -->
     <!-- https://getbootstrap.com/docs/4.5/getting-started/introduction/ -->
@@ -39,7 +38,6 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- Optional Styles                                                   -->
     <!-- ----------------------------------------------------------------- -->
-
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/charadex.css">
 
