--- a/inventories.html
+++ b/inventories.html
@@ -11,10 +11,10 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Akomis</title>
-    <meta property="title" content="Akmois" />
+    <title>LYURIA</title>
+    <meta property="title" content="Lyuria" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.akomis.com/" />
+    <meta property="url" content="https://www.lyuria.com/" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A WIP ARPG by Seleris.">
 
